--- a/src/style/grid.scss
+++ b/src/style/grid.scss
@@ -134,6 +134,28 @@ $xxs: $xxs-grid + $fix;
 	}
 }
 
+:root {
+	@include md {
+		--header-height: 120px;
+	}
+	@include sm {
+		--header-height: 84px;
+	}
+	@include xs {
+		--header-height: 74px;
+	}
+	@include xxs {
+		--header-height: 62px;
+	}
+
+	// @include sm {
+	// 	--header-height: 60px;
+	// }
+	// @include xs {
+	// 	--header-height: 60px;
+	// }
+}
+
 // @include md {
 // }
 // @include sm {
