minor normalize fix

--- a/src/style/normalize.scss
+++ b/src/style/normalize.scss
@@ -3,8 +3,9 @@
 	border: initial;
 	box-sizing: border-box;
 	color: inherit;
-	font-size: 1rem;
-	font-weight: normal;
+	font-family: inherit;
+	font-size: inherit;
+	font-weight: inherit;
 	line-height: 1.25;
 	margin: 0;
 	padding: 0;
